Fixes button alignment above footer

--- a/index.css
+++ b/index.css
@@ -77,13 +77,12 @@ li {
   padding-left: 1em;
 }
 
-.speaker.col-1-3 {
+/*.speaker.col-1-3 {
   width: 60%;
-}
+}*/
 
 hr {
     width: 80%;
-    max-width: 31.25em;
     border: none;
     border-top: 1px solid;
 }
@@ -163,12 +162,11 @@ hr {
 
 .mail-container {
   background: #fff;
-  /*box-shadow: 4px 4px 2px #ddd;*/
-  border: 1px #c3bdbd;
+  border: 1px solid #c3bdbd;
   box-sizing: border-box;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  padding: 20px;
+  margin: 20px auto 20px auto;
+  width: 75%;
+  padding: 9px;
 }
 
 .mail-container p {
@@ -197,11 +195,16 @@ button {
   border-color: #e35772;
   background: #e35772;
   filter: none;
+  margin-top: 1em;
 }
 
 .button:hover {
   background: #d9818b;
   color: #f5f3f0;
+}
+
+.btn-center {
+  text-align: center;
 }
 
 .rect-headshot {
@@ -211,9 +214,9 @@ button {
 }
 
 .clear-me {
-  padding-top: .7em;
-  clear: right;
-  margin-left: 7em;
+  /*padding-top: .7em;*``/
+  /*clear: right;*/
+  /*margin-left: 7em;*/
   margin-top: 0;
   margin-bottom: 1em;
 }
